--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "chromedriver": "^107.0.2",
+    "nightwatch": "^2.4.1",
     "prop-types": "^15.8.1",
     "webpack": "^5.74.0"
   }
